[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "datagonish"
dynamic = ["version"]
authors = [
  { name="J Hughes", email="jhughes@stfx.ca" },
]
description = "Antigonish Stuff"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx==7.2.6",
    "sphinx-material==0.0.36",
]

[project.scripts]
format = "console_scripts.console_scripts:run_code_formatters"
verify = "console_scripts.console_scripts:run_code_verification"
